# builder

./: .gitignore  README.md  SETUP.md  fastmcp.json  fastmcp_cloud_deploy.py  fastmcp_server.py  find_fastmcp_cloud_api.py  move_rules.sh  pipeline.py  requirements.txt  server.py
.github/workflows/: deploy.yml
.windsurf/rules/: commands.md  global.md  requirements.md
builder/: README.md  pipeline.py  server.py
builder/.windsurf/rules/: requirements.md
builder/builds/: README.md
builder/builds/test_mcp_app/: .env.example  README.md  pyproject.toml
builder/builds/test_mcp_app/src/: api_client.py  client_registry.py  oauth_config.py  server.py
builder/builds/test_oauth_mcp/: test_oauth_mcp_server.py  test_test_oauth_server.py
chats/: 02_oauth_cookiecutter_session.md  03_versioning_pipeline_fixes_session.md  04_setup_oauth_rules_session.md  06_mcp_auth_fix_session.md  mcp_builder_development_session.md
cookiecutter/: README.md  cookiecutter.json  test_{{cookiecutter.platform_name}}_server.py
cookiecutter/.windsurf/rules/: requirements.md
cookiecutter/{{cookiecutter.platform_name}}_mcp/: {{cookiecutter.platform_name}}_mcp_server.py
cookiecutter/{{cookiecutter.platform_name}}_mcp/src/: oauth_config.py
host/: README.md  config.py  deployer.py
host/.windsurf/rules/: requirements.md
host/terraform/: main.tf
llm/: README.md  api_analyzer.py  code_generator.py  guardrails.py  validator.py
llm/.windsurf/rules/: requirements.md
tests/: README.md
tests/integration/: test_build_pipeline.py
tests/unit/: test_builder_server.py
(+10 files in other folders)
